# tango-data-aggregator

./: .gitignore  README.md  pyproject.toml
tango_da/: DataAggregator.py  RunConfigurator.py  __init__.py
tango_da/test/: test_lib.py
